# BA-Modding-Toolkit

./: .gitignore  README.md  README_zh-CN.md  i18n.py  main.pyw  maincli.py  processing.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: build-cli.yml  build.yml  check-build-cli.yml  check-build.yml  pytest.yml
locales/: en-US.json  zh-CN.json
scripts/: extract_version.py
src/ba_modding_toolkit/: __main__.py  bundle.py  core.py  i18n.py  models.py  naming.py  report.py  searching.py  spine.py  utils.py
src/ba_modding_toolkit/adb/: __init__.py  cache.py  file_source.py  index.py  manager.py  paths.py
src/ba_modding_toolkit/cli/: __main__.py  handlers.py  main.py  taps.py
src/ba_modding_toolkit/gui/: __init__.py  app.py  base_tab.py  components.py  configs.py  dialogs.py  main.py  utils.py
src/ba_modding_toolkit/gui/tabs/: __init__.py  adb_push_tab.py  asset_extractor_tab.py  asset_packer_tab.py  base_tab.py  batch_legacy_tab.py  batch_update_tab.py  crc_tool_tab.py  info_tab.py  (+4 more)
src/ba_modding_toolkit/locales/: en-US.json  zh-CN.json
tests/: README.md  conftest.py  test_naming_search.py  test_spine.py  test_utils.py
tests/test_cli/: test_crc.py  test_extract.py  test_pack.py  test_split_merge.py  test_update.py
tests/test_core/: test_extractor.py  test_io.py  test_legacy_format.py  test_packer.py  test_update.py
ui/: app.py  base_tab.py  components.py  dialogs.py  utils.py
ui/tabs/: __init__.py  asset_extractor_tab.py  asset_packer_tab.py  crc_tool_tab.py  jp_conversion_tab.py  jp_gb_conversion_tab.py  mod_update_tab.py
(+7 files in other folders)
