[project]
name = "BA-Modding-Toolkit"
version = "0.12.2"
description = "更新、移植、修复碧蓝档案mod的工具集 | Updating&Porting&Fixing Mods for Blue Archive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.0.0",
    "tkinterdnd2>=0.4.3",
    "toml>=0.10.2",
    "ttkbootstrap>=1.10.1",
    "unitypy==1.23.0",
]
