[project]
name = "BA-Modding-Toolkit"
version = "1.1.0"
description = "更新、移植、修复碧蓝档案mod的工具集 | Updating&Porting&Fixing Mods for Blue Archive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.4.0",
    "spineatlas>=1.0.12",
    "tkinterdnd2>=0.4.3",
    "toml>=0.10.2",
    "ttkbootstrap>=1.10.1",
    "unitypy==1.23.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
